syntax = "proto3";

package internal.proto;

option go_package = "github.com/bbquite/go-pass-keeper/internal/proto";

message ErrorResponse {
  bool error = 1;
  string msg = 2;
}

message Empty {}

message AuthUserRequest {
  string username = 1;
  string password = 2;
}

message AuthUserResponse {
  string token = 1;
  ErrorResponse error = 2;
}

message RegisterUserRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message RegisterUserResponse {
  string token = 1;
  ErrorResponse error = 2;
}

enum DataTypeEnum {
  UNKNOWN = 0;
  PAIR = 1;
  TEXT = 2;
  BINARY = 3;
  CARD = 4;
}

message DataItem {
  uint32 id = 1;
  DataTypeEnum dataType = 2;
  string dataInfo = 3;
  string meta = 4;
  string UploadedAt = 5;
}

message CreateDataRequest{
  DataItem data = 1;
}

message CreateDataResponse{
  DataItem data = 1;
  ErrorResponse error = 2;
}

message GetDataResponse{
  repeated DataItem dataList = 1;
  ErrorResponse error = 2;
}

message UpdateDataRequest{
  DataItem data = 1;
}

message DeleteDataRequest{
  uint32 id = 1;
}

service PassKeeperService {
  rpc AuthUser(AuthUserRequest) returns (AuthUserResponse);
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);

  rpc CreateData(CreateDataRequest) returns (CreateDataResponse);
  rpc GetDataList(Empty) returns (GetDataResponse);
  rpc UpdateData(UpdateDataRequest) returns (Empty);
  rpc DeleteData(DeleteDataRequest) returns (Empty);
}